# hello-uv-project

./: README.md  pyproject.toml
src/hello_uv_project/: __init__.py  main.py
src/hello_uv_project/second/: second.py
